[package]
name = "zhengbo-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
axum = "0.6.18"
log = "0.4.19"
log4rs = "1.2.0"
tokio = { version = "1.29.0", features = ["full"] }
